export const snapshot = {};

snapshot[`Disabled pretty URLs 1`] = `1`;

snapshot[`Disabled pretty URLs 2`] = `
{
  formats: [
    {
      engine: true,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: true,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: false,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engine: false,
      ext: ".json",
    },
    {
      engine: true,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engine: true,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`Disabled pretty URLs 3`] = `
[
]
`;

snapshot[`Disabled pretty URLs 4`] = `
{
  content: "<h1>Welcome</h1>
",
  data: {
    content: "# Welcome
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "First page",
    url: "/page1.html",
  },
  dest: {
    ext: ".html",
    path: "/page1",
  },
  src: {
    ext: ".md",
    path: "/page1",
    remote: undefined,
  },
}
`;

snapshot[`Pretty URLs with no-html-extension 1`] = `1`;

snapshot[`Pretty URLs with no-html-extension 2`] = `
{
  formats: [
    {
      engine: true,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: true,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: false,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engine: false,
      ext: ".json",
    },
    {
      engine: true,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engine: true,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`Pretty URLs with no-html-extension 3`] = `
[
]
`;

snapshot[`Pretty URLs with no-html-extension 4`] = `
{
  content: "<h1>Welcome</h1>
",
  data: {
    content: "# Welcome
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "First page",
    url: "/page1",
  },
  dest: {
    ext: ".html",
    path: "/page1",
  },
  src: {
    ext: ".md",
    path: "/page1",
    remote: undefined,
  },
}
`;
